# dj-minimal

./: .gitignore  .jscpd.json  .mega-linter.yml  Makefile  README.md  conftest.py  main.py  pyproject.toml  renovate.json  test_main.py
.github/: dependabot.yml
.github/workflows/: ci.yaml  codeql-analysis.yml  codspeed.yml  mega-linter.yml
src/: main.py
tests/: test_main.py  test_strtobool.py
