[project]
name = "dj-minimal"
version = "0.1.0"
description = "A minimal async django"
authors = [{ name = "Jair Henrique", email = "jair.henrique@gmail.com" }]
requires-python = ">=3.10"
license = "MIT"
dependencies = ["Django==5.2.4", "granian==2.4.2", "uvicorn==0.35.0"]

[dependency-groups]
dev = [
    "mypy==1.17.0",
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
    "pytest-asyncio==1.1.0",
    "pytest-django==4.11.1",
    "ruff==0.12.4",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
omit = ["conftest.py", "tests/**"]
branch = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
pythonpath = "src"
addopts = "--cov --cov-report term-missing --cov-report xml"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "C90", "UP", "N", "I", "SIM", "RUF"]
per-file-ignores = {}
