[project]
name = "dj-minimal"
version = "0.1.0"
description = "A minimal async django"
authors = [{ name = "Jair Henrique", email = "jair.henrique@gmail.com" }]
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "Django==5.2.8",
    "granian==2.6.0",
    "pytest-codspeed>=4.0.0",
    "uvicorn==0.38.0",
]

[dependency-groups]
dev = [
    "mypy==1.19.0",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-asyncio==1.3.0",
    "pytest-django==4.11.1",
    "ruff==0.14.8",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
omit = ["conftest.py", "tests/**"]
branch = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
pythonpath = "src"
addopts = "--cov --cov-report term-missing --cov-report xml"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "C90", "UP", "N", "I", "SIM", "RUF"]
per-file-ignores = {}
