[project]
name = "dj-minimal"
version = "0.1.0"
description = "A minimal async django"
authors = [{ name = "Jair Henrique", email = "jair.henrique@gmail.com" }]
requires-python = ">=3.12"
license = "MIT"
dependencies = ["Django==6.0.3", "granian==2.7.2", "uvicorn==0.42.0"]

[dependency-groups]
dev = [
    "pytest-asyncio==1.3.0",
    "pytest-codspeed==4.3.0",
    "pytest-cov==7.1.0",
    "pytest-django==4.12.0",
    "pytest==9.0.2",
    "ruff==0.15.7",
    "ty==0.0.24",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
omit = ["conftest.py", "tests/**"]
branch = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
pythonpath = "src"
addopts = "--cov --cov-report term-missing --cov-report xml"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "C90", "UP", "N", "I", "SIM", "RUF"]
per-file-ignores = {}
